# tea-pal

./: .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  run.sh  scrap_josaa.js  tnea.backup  tnea.sqlite
frontend/: README.md  compose.yaml  package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.html
frontend/src/lib/: List.svelte  dashcss.css  main.css  nits.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/josaa/: +page.svelte
frontend/src/routes/new_josaa/: +page.svelte
frontend/src/routes/nits/: +page.svelte
frontend/src/routes/tnea/: +page.svelte
src/: main.rs  models.rs  tnea2023_1.csv  tnea_branch-map.json  tnea_college-id.json  utils.rs
src/routes/: bundle.rs  frontend.rs  index.rs  josaa.rs  nits.rs  not_found.rs  query.rs  static_files.rs  tnea.rs
src/views/: index.html
src/views/_app/: version.json
src/views/static/: main.css
views/: index.html
views/_app/: version.json
views/_app/immutable/assets/: List.Df1x-6aD.css  _layout.Ci1_LrA0.css  _page.BOmqQV4F.css  _page.Dq6O3REF.css  _page.VaQGkEiP.css
views/_app/immutable/chunks/: List.BSQP8aP-.js  entry.CHvyYqm_.js  entry.Cf9tARzs.js  index.0K5uXL7a.js  index.AYJZL7P_.js  scheduler.CktBsrYA.js
views/_app/immutable/entry/: app.BhOnut8X.js  app.CELsbnsS.js  start.DwqKFxDl.js  start.UMKZ0QKa.js
views/_app/immutable/nodes/: 0.CXA1DYkz.js  0.nWrZ20y2.js  1.B0aOfKo2.js  1.D8beVyn2.js  2.CYI1TqxX.js  2.CxvqcSih.js  3.BvANNtri.js  4.CscAOfVB.js  4.DTWmshsh.js
(+7 files in other folders)
